adds to notes app javascript

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -18,12 +18,8 @@
         
       </div>
       <div class="note-editor">
-        <p class="note-editor-info">Timestamp here...</p>
-        <textarea class="note-editor-input">
-          First note...
-          
-          Note text here...
-        </textarea>
+        <p class="note-editor-info"></p>
+        <textarea class="note-editor-input"></textarea>
       </div>
     </div>
   </div>
