Adds update note create note and delete note to javascript note app

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -14,12 +14,10 @@
       <input class="toolbar-search" type="text" placeholder="Search...">
     </div>
     <div class="note-container">
-      <div class="note-selectors">
-        
-      </div>
+      <div class="note-selectors"></div>
       <div class="note-editor">
         <p class="note-editor-info"></p>
-        <textarea class="note-editor-input"></textarea>
+        <textarea class="note-editor-input" onchange="console.log(this)"></textarea>
       </div>
     </div>
   </div>
